Deerfly_Patches/Content/Site.css
/* ***************** COMMON ***************************************** */

body {
    padding-bottom: 20px;
    background-image: url("/Content/images/birch-forest-tile.jpg");
    box-sizing: border-box;
}

.body-content {
    background-color: #f8fff8; /* offwhite */
    color: #011f01; /* super dark green */
    padding-left: 15px;
    padding-right: 15px;
    font-size: medium;
}

main {
    min-height: 75vh;
    display: block;
}

footer {
    font-size: small;
    bottom: 0;
}

hr {
    margin: 10px 0;
}

.larger-text {
    font-size: larger;
}

.container {
    height: auto;
}

main.container {
    padding: 0;
}

.model-views-container {
    width: 100%;
    margin: 10px;
    padding: 10px;
    background-color: #f8fff8; /* offwhite */
    box-sizing: border-box;
}

.row {
    height: auto;
    margin: 10px 4px;
}

.thumbnail {
    max-width: 100px;
}

.image-square-rounded {
    width: 100%;
    height: 300px;
    max-width: 300px;
    margin: 0 auto;
    display: block;
    border-radius: 14px;
}

.background-image {
    position: absolute;
    width: 100%;
    max-height: 290px;
    max-width: 310px;
}

.foreground-text {
    position: inherit;
    font-size: small;
    padding: 40px 10px 20px 80px;
}

h2 {
    background-color: #225f22; /* dark green */
    color: white;
    padding: 4px;
    border: 2px outset #b2ff76;
    border-radius: 6px;
    margin: 6px 2px;
}

textarea {
    width: 100%;
    height: 10em;
}


/* ****************************** Navbar ****************************************** */
.navbar-inverse .navbar-brand,
.navbar-inverse .navbar-nav li a {
    color: #b2ff76;
}

.logo {
    width: 204px;
    height: 72px;
    margin: 3px;
}

.navbar {
    margin: 0;
}
.navbar > .container {
    width: 100%;
    margin: 4px;
    padding: 4px;
    max-width: none;
}

@media screen and (min-width: 1000px){
    .navbar-collapse,
    .navbar > .container {
        width: 950px;
        margin: auto;
    }
}


.navbar-header {
    max-width: 100%;
}

.container > .navbar-header {
    margin: 0;
}

.mynav {
    font-weight: bold;
    font-size: medium;
    margin: 12px 4px;
}

/* Menu items */
.mynav > li {
    background-color: #225f22;  /* dark green */
    border-radius: 14px;
    margin: 6px;
}

.navbar-nav li a {
    padding: 8px;
}

/* Shopping Cart Icon Fix */
.glyphicon {
    position: inherit;
    margin-right: 8px;
}

/* ****************************** Bottom Navbar ******************* */


#navbar-bottom.navbar {
    background-color: #f8fff8; /* offwhite */
    border: none;
    min-height: 0;
}

#navbar-bottom .container {
    padding-top: 0;
    margin-top: 0;
}

#navbar-bottom .mynav {
    margin: 0;
    padding: 0;
    font-size: small;
    width: 100%;
}

#navbar-bottom .mynav > li {
    background-color: #f8fff8; /* offwhite */
    margin: auto;
    padding: 0;
    /* 100% divided by number of items */
    width: 50%;
}
        
#navbar-bottom .navbar-nav li a {
    padding: 2px;
    margin: 0 auto;
    text-align: center;
    border: thin solid transparent;
    color: #225f22; /* dark green */
}

#navbar-bottom .navbar-nav li a:hover {
    font-weight: 800;
}


/* **************************** Product display *********************************** */
.product-item {
    height: auto;
    margin-bottom: 20px;
    padding: 5px;
    border-radius: 14px;
}

.product-item * {
    text-align: center;
    margin: 0;
    padding: 0;
}

.product-image {
    width: 200px;
    height: 220px;
    margin: auto;
}

.product-image img {
    max-width: 200px;
}

.product-image:hover {
    border: inset green 4px;
    border-radius: 8px;
}

.buy-now{
    background-color: red;
    color: white;
    font-size: larger;
    min-width: 100px;
    min-height: 20px;
    border: gray 2px outset;
}

.add-to-shopping-cart {
    margin: 4px;
}

.product-item button:hover {
    background-color: maroon;
    color: white;
}

.product-item.selected .buy-now {
    border: black 2px solid;
    border-radius: 6px;
}

.image-wrapper {
    width: 100%;
}

/* ************************* Product page ******************** */
#product-page-images img {
    width: auto;
    max-width: 100%;
    max-height: 75vh;
    margin: auto;
}

#product-page-description dt,
#product-page-description dd {
    margin-bottom: 8px;
}


/* ************************* Order detail page *************** */
.item-detail-header *,
.item-detail-total * {
    font-weight: bold;
}

/* ************************* About page ********************** */
.deerfly-images-content > * {
    margin: auto;
    display: block;
    max-width: 100%;
}



/* ************************* Retailer map page *************** */
#retailer-map-container {
    height: 100%;
    border-radius: 8px;
    border: thick ridge green;
}

#retailer-map-view {
    height: 100%;
    border: thin black solid;
}

#retailer-list-view {
    height: 100%;
    border: 2px gray inset;
    background-color: beige;
}

#retailer-list-filter {
    height: 17%;
    overflow: auto;
}

#retailer-list {
    height: 83%;
    overflow: scroll;
}

#retailer-map-container > * {
    height: 70vh;
}

#retailer-list-view form {
    width: 100%;
}

#retailer-list-view form input[name='zip'] {
    width: 50px;
}

#retailer-list-view form input[name='range'] {
    width: 30px;
}

.retailer-name {
    font-weight: bold;
}


/* **************************** Testimonials page ******************************* */
#testimonial-list {
    overflow: auto;
    height: 75vh;
}

#testimonial-display {
    height: 80vh;
    border: ridge green thick;
    border-radius: 14px;
    text-align: center;
    padding: 0;
}

#testimonial-display img {
    display: block;
    object-fit: contain;
    width: 100%;
    height: 100%;
}

.selected-testimonial {
    font-weight: bold;
}

/* ********************** FAQ page ******************************* */
.faq {
    margin: 10px auto;
    box-sizing: border-box;
    border: thin solid green;
    border-radius: 14px;
    height: 300px;
}

.c1 {
    background-color: lightgoldenrodyellow;
}

.c2 {
    background-color: lightcyan;
}

.c3 {
    background-color: antiquewhite;
}

.c4 {
    background-color: lavender;
}

.qa-question,
.qa-answer {
    padding: 8px;
}

.qa-question {
    font-size: large;
    font-weight: bold;
    height: 100px;
}

.qa-question::before,
.qa-answer::before {
    font-size: 20pt;
    font-weight: bold;
    color: black;
    text-align: center;
    border: green outset thick;
    border-radius: 14px;
    float: left;
    width: 2em;
    height: 2em;
    padding: 8px;
    margin-right: 10px;
}

.qa-question::before {
    content: 'Q';
}
.qa-answer::before {
    content: 'A';
}

/* ******************************** Shopping Cart Page ******************************** */
.shopping-cart-product-image {
    max-width: 100%;
}

#country-select,
#enter-promo-code {
    width: 45%;
    display: inline-block;
}

#enter-promo-code {
    float: right;
}

#no-paypal {
    width: 250px;
    border: ridge thick green;
    border-radius: 14px;
    padding: 6px;
}

#no-paypal h4 {
    margin: auto;
}

/* ******************************** Model Scaffolding ********************************* */
#upload-image-preview {
    max-width: 300px;
    max-height: 300px;
}

#product-images {
    display: flex;
}


/* ******************** EditIndex.js ***************************************** */

.input-text {
    background-color: white;
    background-color: -moz-field;
    border: 1px solid darkgray;
    box-shadow: 1px 1px 1px 0 lightgray;
    font: -moz-field;
    font: -webkit-small-control;
    margin-top: 5px;
    padding: 2px 3px;
    width: 100%;
}

.green-border {
    border: ridge thick green;
    border-radius: 14px;
}

.red-border {
    border: ridge thick red;
}

.border-fade {
    border-color: transparent;
    border-radius: 0;
    border-width: 1px;
    transition-property: all;
    transition-duration: 3s;
    transition-timing-function: ease;
}

/* ********************* Overrides ******************************* */
.centered {
    margin-left: auto;
    margin-right: auto;
    display: block;
}

.flex {
    flex-wrap: wrap;
}

